# pyorigins

./: LICENSE  README.md  pyproject.toml
config/: path.py  schema.py
src/: main.py
